chore: improve openapi docs
