# api/rest/strudels/types.go
@@ -1,0 +1,13 @@
+package strudels
+
+import "github.com/algorave/server/algorave/strudels"
+
+// StrudelsListResponse wraps a list of strudels
+type StrudelsListResponse struct {
+	Strudels []strudels.Strudel `json:"strudels"`
+}
+
+// MessageResponse for simple success messages
+type MessageResponse struct {
+	Message string `json:"message"`
+}
